--- a/views/registroasistencia.ejs
+++ b/views/registroasistencia.ejs
@@ -10,24 +10,24 @@
     <section class="content">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12">
+            <div class="col-12"  >
               <div class="card">
                 <div class="card-header">
-                  <h3 class="card-title">Miembros</h3>
+                  <h3 class="card-title">Registro Asistencia</h3>
                   <button  id="btnMiembro" style="float:right" type="button" class="btn btn-primary btn-sm btnNewMiembro" data-toggle="modal" data-target="#modal-miembros">
                     Nuevo
                     <i class="fa fa-user-plus"></i></button>
                 </div>
                 <!-- /.card-header -->
-                <div class="card-body table-responsive">
-                  <table id="tablamiembros" class="table table-bordered table-hover ">
+                <div class="card-body table-responsive" >
+                  <table id="tablamiembros" class="table table-bordered table-hover " style="margin-top:10px">
                     <thead>
                     <tr>
                      
                       <th>Nombre y Apellido</th>
                       <th class="d-none d-sm-none d-md-table-cell">Sexo</th>
                       <th>Teléfono</th>
-                      <th>-</th>
+                      <th style="width:50px;">-</th>
                     
                     </tr>
                     </thead>
