--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,8 +79,8 @@
                   </a>-->
                 </div>
               </div>
-              <div class="card-body table-responsive p-0">
-                <table class="table table-striped table-valign-middle">
+              <div class="card-body table-responsive">
+                <table id="tabla-visitantes" class="table table-striped table-valign-middle">
                   <thead>
                   <tr>
                     <th>Nº</th>
@@ -147,8 +147,8 @@
                   </a>-->
                 </div>
               </div>
-              <div class="card-body table-responsive p-0">
-                <table class="table table-striped table-valign-middle">
+              <div class="card-body table-responsive">
+                <table id="tabla-seguimiento" class="table table-bordered table-hover">
                   <thead>
                   <tr>
                     <th>Nombre</th>
