--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -467,7 +467,7 @@
                  
                   <div class="input-group">
                     
-                    <input type="text" class="form-control" id="miembro_id" name="miembro_id">
+                    <input type="hidden" class="form-control" id="miembro_id" name="miembro_id">
                   </div>
     
                 </div>
@@ -609,6 +609,28 @@ $.widget.bridge('uibutton', $.ui.button)
     });
 
     $('#tablamiembros').DataTable({
+      "paging": true,
+      "lengthChange": true,
+      "searching": true,
+      "ordering": true,
+      "info": true,
+      "autoWidth": true,
+      "responsive": false,
+      "buttons": ["excel"]
+    }).buttons().container().appendTo('#tablamiembros_wrapper .col-md-6:eq(0)');
+
+    $('#tabla-visitantes').DataTable({
+      "paging": true,
+      "lengthChange": true,
+      "searching": true,
+      "ordering": true,
+      "info": true,
+      "autoWidth": true,
+      "responsive": false,
+      "buttons": ["excel"]
+    }).buttons().container().appendTo('#tablamiembros_wrapper .col-md-6:eq(0)');
+
+    $('#tabla-seguimiento').DataTable({
       "paging": true,
       "lengthChange": true,
       "searching": true,
