--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -168,6 +168,14 @@
 
             </div>
 
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" id="sin_cedula" name="sin_cedula" type="checkbox" value="0">
+                <label class="form-check-label">Sin Cédula</label>
+              </div>
+              
+            </div>
+
             <!-- Telefono -->
             <div id="" class="form-group">
               <label>Teléfono:</label>
