--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -613,7 +613,27 @@ $.widget.bridge('uibutton', $.ui.button)
       "ordering": true,
       "info": true,
       "autoWidth": false,
-      "responsive": true,
+      "responsive": false,
+      language: {
+        "decimal": "",
+        "emptyTable": "Sin Resultados",
+        "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
+        "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
+        "infoFiltered": "(Filtrado de _MAX_ total entradas)",
+        "infoPostFix": "",
+        "thousands": ",",
+        "lengthMenu": "Mostrar _MENU_ Entradas",
+        "loadingRecords": "Cargando...",
+        "processing": "Procesando...",
+        "search": "Buscar:",
+        "zeroRecords": "Sin resultados encontrados",
+        "paginate": {
+            "first": "Primero",
+            "last": "Ultimo",
+            "next": "Siguiente",
+            "previous": "Anterior"
+        }
+    }
     });
 
     $('#tablamiembros').DataTable({
@@ -624,7 +644,27 @@ $.widget.bridge('uibutton', $.ui.button)
       "info": true,
       "autoWidth": true,
       "responsive": false,
-      "buttons": ["excel"]
+      "buttons": ["excel"],
+      language: {
+        "decimal": "",
+        "emptyTable": "Sin Resultados",
+        "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
+        "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
+        "infoFiltered": "(Filtrado de _MAX_ total entradas)",
+        "infoPostFix": "",
+        "thousands": ",",
+        "lengthMenu": "Mostrar _MENU_ Entradas",
+        "loadingRecords": "Cargando...",
+        "processing": "Procesando...",
+        "search": "Buscar:",
+        "zeroRecords": "Sin resultados encontrados",
+        "paginate": {
+            "first": "Primero",
+            "last": "Ultimo",
+            "next": "Siguiente",
+            "previous": "Anterior"
+        }
+    }
     }).buttons().container().appendTo('#tablamiembros_wrapper .col-md-6:eq(0)');
 
     $('#tabla-visitantes').DataTable({
@@ -635,7 +675,27 @@ $.widget.bridge('uibutton', $.ui.button)
       "info": true,
       "autoWidth": true,
       "responsive": false,
-      "buttons": ["excel"]
+      "buttons": ["excel"],
+      language: {
+        "decimal": "",
+        "emptyTable": "Sin Resultados",
+        "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
+        "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
+        "infoFiltered": "(Filtrado de _MAX_ total entradas)",
+        "infoPostFix": "",
+        "thousands": ",",
+        "lengthMenu": "Mostrar _MENU_ Entradas",
+        "loadingRecords": "Cargando...",
+        "processing": "Procesando...",
+        "search": "Buscar:",
+        "zeroRecords": "Sin resultados encontrados",
+        "paginate": {
+            "first": "Primero",
+            "last": "Ultimo",
+            "next": "Siguiente",
+            "previous": "Anterior"
+        }
+    }
     }).buttons().container().appendTo('#tablamiembros_wrapper .col-md-6:eq(0)');
 
     $('#tabla-seguimiento').DataTable({
@@ -646,7 +706,28 @@ $.widget.bridge('uibutton', $.ui.button)
       "info": true,
       "autoWidth": true,
       "responsive": false,
-      "buttons": ["excel"]
+      "buttons": ["excel"],
+      language: {
+        "decimal": "",
+        "emptyTable": "Sin Resultados",
+        "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
+        "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
+        "infoFiltered": "(Filtrado de _MAX_ total entradas)",
+        "infoPostFix": "",
+        "thousands": ",",
+        "lengthMenu": "Mostrar _MENU_ Entradas",
+        "loadingRecords": "Cargando...",
+        "processing": "Procesando...",
+        "search": "Buscar:",
+        "zeroRecords": "Sin resultados encontrados",
+        "paginate": {
+            "first": "Primero",
+            "last": "Ultimo",
+            "next": "Siguiente",
+            "previous": "Anterior"
+        }
+    }
+
     }).buttons().container().appendTo('#tablamiembros_wrapper .col-md-6:eq(0)');
 
 
