--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -19,7 +19,7 @@
                     <i class="fa fa-user-plus"></i></button>
                 </div>
                 <!-- /.card-header -->
-                <div class="card-body">
+                <div class="card-body table-responsive">
                   <table id="example2" class="table table-bordered table-hover">
                     <thead>
                     <tr>
