--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,20 +46,20 @@
             </div>
           </div>
           <!-- ./col -->
-          <!--<div class="col-lg-3 col-6">
+          <div class="col-lg-3 col-6">
    
             <div class="small-box bg-danger">
               <div class="inner">
-                <h3>65</h3>
+                <h3><%= cumpleanios.length %></h3>
 
-                <p>Unique Visitors</p>
+                <p>Cumpleaños de hoy</p>
               </div>
               <div class="icon">
-                <i class="ion ion-pie-graph"></i>
+                <i class="ion ion-happy-outline"></i>
               </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              <a href="/cumpleanios" class="small-box-footer">Más Información <i class="fas fa-arrow-circle-right"></i></a>
             </div>
-          </div>-->
+          </div>
    
         </div>
         <!-- /.row -->
