--- a/views/registroasistencia.ejs
+++ b/views/registroasistencia.ejs
@@ -47,6 +47,10 @@
                       <input type="hidden" id='cedula_html_<%= item.miembro_id %>' value='<%=item.miembro_cedula %>' >
                       <input type="hidden" id='nacimiento_html_<%= item.miembro_id %>' value='<%=item.fecha_nac %>' >
 
+                      <input type="hidden" id='observaciones_html_<%= item.miembro_id %>' value='<%=item.miembro_observaciones %>' >
+
+                      <input type="hidden" id='horario_html_<%= item.miembro_id %>' value='<%=item.miembro_horario %>' >
+
                       <input type="hidden" id='user_id_html_<%= item.miembro_id %>' value=<%= user_id %> >
 
                      
