--- a/views/registroweb.ejs
+++ b/views/registroweb.ejs
@@ -10,9 +10,12 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/album/">
 
-    
+ 
+  <!-- Toastr -->
+  <link rel="stylesheet" href="plugins/toastr/toastr.min.css">
 
-    
+     <!-- Theme style -->
+  <link rel="stylesheet" href="dist/css/adminlte.min.css">
 
     
 
@@ -124,7 +127,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Registro para nuestro culto del día <%= dias_semana[mi_dia] %> <%= dia_culto %></h1>
-        <!--<p class="lead text-muted">Por favor ingrese su número de cédula.</p>-->
+        <p class="lead text-muted">Dios te bendiga. Somos CCLR tu familia !</p>
         <!--<p>
           <a href="#" class="btn btn-primary my-2">Main call to action</a>
           <a href="#" class="btn btn-secondary my-2">Secondary action</a>
@@ -135,45 +138,76 @@
 
   <div class="album py-5 bg-light">
     <div class="container">
-        <div class="form-row">
+       
         <% if(!mostrarform) { %>    
         <form name="form_registroweb" id="form_registroweb" action="/searchcedula" method="post">
-            <div class="form-group col-md-6 mb-2">
-                <label for="exampleInputPassword1">Cédula</label>
-                <input type="text" name="cedula" class="form-control" id="exampleInputPassword1" placeholder="Cédula">
+            <div class="card card-primary">
+                <div class="card-header">
+                  <h3 class="card-title">Buscar Cédula</h3>
+                </div>
+                <!-- /.card-header -->
+                <!-- form start -->
+                <form>
+                  <div class="card-body">
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Cédula</label>
+                      <input type="text" name="cedula" class="form-control" id="exampleInputEmail1" placeholder="Cédula">
+                    </div>
+                    
+                    
+                  </div>
+                  <!-- /.card-body -->
+  
+                  <div class="card-footer">
+                    <button type="submit" class="btn btn-primary">Buscar</button>
+                  </div>
+                </form>
               </div>
-              
-              <button type="submit" class="btn btn-primary">Buscar</button>
-          </form>
-          </div>
+        </form> 
+
         <% } %>
 
           <% if(mostrarform) { %>
             <form name="form_registroweb" id="form_registroweb" action="/confirmarregistroweb" method="post">
-                <div class="form-group col-md-12">
-                    <label for="inputEmail4">Cédula</label>
-                    <input type="text" readonly class="form-control" id="inputEmail4" placeholder="Cédula" value="<%= results[0].miembro_cedula %>">
-                </div>  
-                  <div class="form-group col-md-12">
-                    <label for="inputEmail4">Nombre</label>
-                    <input type="text" readonly class="form-control" id="inputEmail4" placeholder="Nombre" value="<%= results[0].miembro_nombres %>">
-                  </div>
-                  <div class="form-group col-md-12 mb-2">
-                    <label for="inputPassword4">Apellidos</label>
-                    <input type="text" readonly class="form-control" id="inputPassword4" placeholder="Apellidos" value="<%= results[0].miembro_apellidos %>">
-                  </div>
+                
 
-                 
-                    <input type="hidden" class="form-control" id="inputPassword4" name="fecha_culto" placeholder="" value="<%= miculto[0].fecha_culto %>">
+            <div class="card card-primary">
+                <div class="card-header">
+                  <h3 class="card-title">Mis Datos</h3>
+                </div>
+ 
+                <form>
+                  <div class="card-body">
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Cédula</label>
+                      <input type="text" readonly class="form-control" id="exampleInputEmail1" placeholder="Cédula" value="<%= results[0].miembro_cedula %>">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Nombre</label>
+                        <input type="text" readonly class="form-control" id="exampleInputEmail1" placeholder="Nombre" value="<%= results[0].miembro_nombres %>">
+                      </div>
+
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">Apellido</label>
+                        <input type="text" readonly class="form-control" id="exampleInputEmail1" placeholder="Apellido" value="<%= results[0].miembro_apellidos %>">
+                      </div>
+
+                      <input type="hidden" class="form-control" id="inputPassword4" name="fecha_culto" placeholder="" value="<%= miculto[0].fecha_culto %>">
               
 
                   
                     <input type="hidden" readonly class="form-control" id="inputPassword4" name="miembro_id" placeholder="" value="<%= results[0].miembro_id %>">
-                 
+                    
+                    
+                  </div>
+  
+                  <div class="card-footer">
+                    <button type="submit" class="btn btn-primary">Registrar</button>
+                  </div>
+                </form>
+              </div>
 
-                
-
-            <button type="submit" class="btn btn-primary">Registrar</button>
           </form>
           <% } %>
 
@@ -196,6 +230,127 @@
 
     <script src="https://getbootstrap.com/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
+
+
+    
+<!-- jQuery -->
+<script src="plugins/jquery/jquery.min.js"></script>
+<!-- jQuery UI 1.11.4 -->
+<script src="plugins/jquery-ui/jquery-ui.min.js"></script>
+<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+<script>
+$.widget.bridge('uibutton', $.ui.button)
+</script>
+<!-- Bootstrap 4 -->
+<script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- jquery-validation -->
+<script src="plugins/jquery-validation/jquery.validate.min.js"></script>
+<script src="plugins/jquery-validation/additional-methods.min.js"></script>
+
+<!-- ChartJS -->
+<script src="plugins/chart.js/Chart.min.js"></script>
+<!-- Sparkline -->
+<script src="plugins/sparklines/sparkline.js"></script>
+<!-- JQVMap -->
+<script src="plugins/jqvmap/jquery.vmap.min.js"></script>
+<script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+<!-- jQuery Knob Chart -->
+<script src="plugins/jquery-knob/jquery.knob.min.js"></script>
+<!-- daterangepicker -->
+<script src="plugins/moment/moment.min.js"></script>
+<script src="plugins/daterangepicker/daterangepicker.js"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- Summernote -->
+<script src="plugins/summernote/summernote-bs4.min.js"></script>
+<!-- overlayScrollbars -->
+<script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+<!-- AdminLTE App -->
+<script src="dist/js/adminlte.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="dist/js/demo.js"></script>
+<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+<script src="dist/js/pages/dashboard.js"></script>
+
+<!-- SweetAlert2 -->
+<script src="plugins/sweetalert2/sweetalert2.min.js"></script>
+<!-- Toastr -->
+<script src="plugins/toastr/toastr.min.js"></script>
+
+
+<!-- InputMask -->
+<script src="plugins/moment/moment.min.js"></script>
+<script src="plugins/inputmask/jquery.inputmask.min.js"></script>
+<!-- date-range-picker -->
+<script src="plugins/daterangepicker/daterangepicker.js"></script>
+
+<!-- Select2 -->
+<script src="plugins/select2/js/select2.full.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+
+
+
+<% if(alert_registro) { %>
+    <script>
+  //alert('modal');
+  $('#btnMiembro').trigger('click');
+  var Toast = Swal.mixin({
+    toast: true,
+    position: 'top-end',
+    showConfirmButton: false,
+    timer: 4000
+  });
+  
+  
+  $.validator.setDefaults({
+    submitHandler: function () {
+      document.getElementById("form_registroweb").submit();
+    }
+  });
+  setTimeout(function(){
+    toastr.success('Registro creado!') 
+  }, 1000);
+  
+    </script>
+  <% } %>  
+  
+
+
+<script>
+
+$('#form_registroweb').validate({
+    rules: {
+      cedula: {
+        required: true
+      },
+      
+     
+    },
+    messages: {
+      cedula: {
+        required: "Ingrese una Cédula"
+ 
+      }
+     
+     
+    },
+    errorElement: 'span',
+    errorPlacement: function (error, element) {
+      error.addClass('invalid-feedback');
+      element.closest('.form-group').append(error);
+    },
+    highlight: function (element, errorClass, validClass) {
+      $(element).addClass('is-invalid');
+    },
+    unhighlight: function (element, errorClass, validClass) {
+      $(element).removeClass('is-invalid');
+    }
+  });
+</script>
       
   </body>
 </html>
