--- a/views/registrowebnuevo.ejs
+++ b/views/registrowebnuevo.ejs
@@ -156,7 +156,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Registro para nuestro culto del día <%= dias_semana[mi_dia] %> <%= dia_culto %></h1>
-        <!--<p class="lead text-muted">Por favor ingrese su número de cédula.</p>-->
+        <p class="lead text-muted">Dios te bendiga. Somos CCLR tu familia !</p>
         <!--<p>
           <a href="#" class="btn btn-primary my-2">Main call to action</a>
           <a href="#" class="btn btn-secondary my-2">Secondary action</a>
@@ -168,93 +168,93 @@
   <div class="album py-5 bg-light">
     <div class="container">
         
-          
+   
       <form name="form_miembros" id="form_miembros" action="/savemiembroregistro" method="post">
-                
-                  <!-- Nombre -->
-            <div class="form-group">
-              <label>Nombre:</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="far fa-user"></i></span>
-                </div>
-                <input type="text" class="form-control" name="miembro_nombres" id="miembro_nombres" value="<%= mostrarDatos==true ? nombre:'' %>">
-              </div>
-            </div>
+             
+                    <div class="card card-primary">
+                      <div class="card-header">
+                        <h3 class="card-title">Mis Datos</h3>
+                      </div>
+                      <div class="card-body">
+                      
+                        <div class="form-group">
+                          <label>Nombre:</label>
+        
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="far fa-user"></i></span>
+                            </div>
+                            <input type="text" class="form-control" name="miembro_nombres" id="miembro_nombres" value="<%= mostrarDatos==true ? nombre:'' %>">
+                          </div>
+                        </div>
 
+                        <div class="form-group">
+                          <label>Apellido:</label>
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="far fa-user"></i></span>
+                            </div>
+                            <input type="text" class="form-control" name="miembro_apellidos" id="miembro_apellidos" value="<%= mostrarDatos==true ? apellido:'' %>">
+                          </div>
+                        </div> 
 
-             <!-- Apellido -->
-             <div class="form-group">
-              <label>Apellido:</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="far fa-user"></i></span>
-                </div>
-                <input type="text" class="form-control" name="miembro_apellidos" id="miembro_apellidos" value="<%= mostrarDatos==true ? apellido:'' %>">
-              </div>
+                        <div class="form-group">
+                          <label>Sexo:</label>
+                          
+                          <select class="form-control" style="width: 100%;" name="miembro_sexo" id="miembro_sexo">
+                            <option value="0">Masculino</option>
+                            <option value="1">Femenino</option>
+                           
+                          </select>
+                        </div>
 
-            </div>
+                        <div class="form-group">
+                          <label>Cédula:</label>
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="fa fa-address-card"></i></span>
+                            </div>
+                            <input type="text" class="form-control" name="miembro_cedula" id="miembro_cedula" value="<%= mostrarDatos==true ? cedula:'' %>">
+                          </div>
+                        </div> 
 
-            <div class="form-group">
-              <label>Sexo:</label>
-              
-              <select class="form-control" style="width: 100%;" name="miembro_sexo" id="miembro_sexo">
-                <option value="0">Masculino</option>
-                <option value="1">Femenino</option>
-               
-              </select>
-            </div>
+                        <div class="form-group">
+                          <label>Teléfono:</label>
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="fas fa-phone"></i></span>
+                            </div>
+                            <input type="text" data-inputmask='"mask": "(9999)999-99-99"' data-mask class="form-control" name="miembro_telefono" id="miembro_telefono" value="<%= mostrarDatos==true ? telefono:'' %>">
+                          </div>
+                        </div> 
 
-             <!-- Cédula -->
-             <div class="form-group">
-              <label>Cédula:</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="fa fa-address-card"></i></span>
-                </div>
-                <input type="text" class="form-control" name="miembro_cedula" id="miembro_cedula" value="<%= mostrarDatos==true ? cedula:'' %>">
-              </div>
+                        <div class="form-group">
+                          <label>Fecha de Nacimiento:</label>
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="fas fa-calendar"></i></span>
+                            </div>
+                            <input type="text" data-inputmask-alias="datetime" data-inputmask-inputformat="dd/mm/yyyy" data-mask class="form-control" name="miembro_nacimiento" id="miembro_nacimiento" value="<%= mostrarDatos==true ? nacimiento:'' %>">
+                          </div>
+                        </div> 
 
-            </div>
-
-            
-            <!-- Telefono -->
-            <div id="" class="form-group">
-              <label>Teléfono:</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="fas fa-phone"></i></span>
-                </div>
-                <input type="text" class="form-control" data-inputmask='"mask": "(9999)999-99-99"' data-mask name="miembro_telefono" id="miembro_telefono" value="<%= mostrarDatos==true ? telefono:'' %>">
-              </div>
-
-            </div>
-
-            <div id="" class="form-group">
-              <label>Fecha Nacimiento:</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="fas fa-calendar"></i></span>
-                </div>
-                <input type="text" class="form-control" data-inputmask-alias="datetime" data-inputmask-inputformat="dd/mm/yyyy" data-mask name="miembro_nacimiento" id="miembro_nacimiento" value="<%= mostrarDatos==true ? nacimiento:'' %>">
-              </div>
-
-            </div>
-
-
-                 
-                    <input type="hidden" class="form-control" id="inputPassword4" name="fecha_culto" placeholder="" value="<%= miculto[0].fecha_culto %>">
+                        <input type="hidden" class="form-control" id="inputPassword4" name="fecha_culto" placeholder="" value="<%= miculto[0].fecha_culto %>">
         
 
-                  
-                   
+                        <div class="card-footer">
+                          <button type="submit" class="btn btn-primary">Registrar</button>
+                        </div>
 
-            <button type="submit" class="btn btn-primary">Registrar</button>
+   
+                      </div>
+
+                    </div>
+
+            
+
           </form>
-  
 
-
-    </div>
+  </div>
   </div>
 
 </main>
