--- a/views/template/sidebar.ejs
+++ b/views/template/sidebar.ejs
@@ -85,6 +85,27 @@
               </p>
             </a>
           </li>
+
+          <li class="nav-item">
+            <a href="/aperturaservicio" class='nav-link <%= menuactivo=="aperturaservicio" ? "active":"" %>'>
+              <i class="nav-icon fas fa-file"></i>
+              <p>
+                Aperturar Servicios
+                <!-- <span class="right badge badge-danger">New</span> -->
+              </p>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/asistenciaregistroweb" class='nav-link <%= menuactivo=="asistenciaregistroweb" ? "active":"" %>'>
+              <i class="nav-icon fas fa-users"></i>
+              <p>
+                Registro Web
+                <!-- <span class="right badge badge-danger">New</span> -->
+              </p>
+            </a>
+          </li>
+
           <% } %>
 
           <% if(user_type!=3) { %>
