--- a/views/registrowebnuevo.ejs
+++ b/views/registrowebnuevo.ejs
@@ -155,8 +155,8 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Registro para nuestro culto del día <%= dias_semana[mi_dia] %> <%= dia_culto %></h1>
-        <p class="lead text-muted">Dios te bendiga. Somos CCLR tu familia !</p>
+        <h1 class="fw-light">Registro para nuestro servicio del día <%= dias_semana[mi_dia] %> <%= dia_culto %></h1>
+        <p class="lead text-muted">De parte de los Apóstoles Hugo y Mariela te damos la más cordial bienvenida a tu casa. ¡Somos CCLR tu familia! Dios te bendiga</p>
         <!--<p>
           <a href="#" class="btn btn-primary my-2">Main call to action</a>
           <a href="#" class="btn btn-secondary my-2">Secondary action</a>
@@ -214,7 +214,7 @@
                             <div class="input-group-prepend">
                               <span class="input-group-text"><i class="fa fa-address-card"></i></span>
                             </div>
-                            <input type="text" class="form-control" name="miembro_cedula" id="miembro_cedula" value="<%= mostrarDatos==true ? cedula:'' %>">
+                            <input type="text" class="form-control" name="miembro_cedula" id="miembro_cedula" value="<%= mostrarDatos==true ? cedula:cedula %>">
                           </div>
                         </div> 
 
