--- a/views/template/sidebar.ejs
+++ b/views/template/sidebar.ejs
@@ -90,7 +90,7 @@
             <a href="/aperturaservicio" class='nav-link <%= menuactivo=="aperturaservicio" ? "active":"" %>'>
               <i class="nav-icon fas fa-file"></i>
               <p>
-                Aperturar Servicios
+                Aperturar Registro Web
                 <!-- <span class="right badge badge-danger">New</span> -->
               </p>
             </a>
