--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -45,5 +45,5 @@
 
     <!-- Preloader -->
     <div class="preloader flex-column justify-content-center align-items-center">
-      <img class="animation__shake" src="dist/img/logocclr.png" alt="AdminLTELogo" height="120" width="120">
+      <img width="50" height="50" class="animation__shake" src="dist/img/paloma.png" alt="AdminLTELogo" height="120" width="120">
     </div>
