--- a/views/registroweb.ejs
+++ b/views/registroweb.ejs
@@ -119,12 +119,13 @@
       </button>-->
     </div>
   </div>
+  <img src="dist/img/hugomariela.jpg" style="width:100%" class="img-fluid" alt="Pastores">
 </header>
 
 <main>
 
-  <section class="py-5 text-center container">
-    <div class="row py-lg-5">
+  <section class="py-3 text-center container">
+    <div class="row py-lg-1">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Registro para nuestro servicio del día <%= dias_semana[mi_dia] %> <%= dia_culto %></h1>
         <p class="lead text-muted">De parte de los Apóstoles Hugo y Mariela te damos la más cordial bienvenida a tu casa. ¡Somos CCLR tu familia! Dios te bendiga</p>
@@ -136,7 +137,7 @@
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
+  <div class="album py-1 bg-light">
     <div class="container">
        
         <% if(!mostrarform) { %>    
