--- a/views/registroweb.ejs
+++ b/views/registroweb.ejs
@@ -152,7 +152,7 @@
                   <div class="card-body">
                     <div class="form-group">
                       <label for="exampleInputEmail1">Cédula</label>
-                      <input type="text" name="cedula" class="form-control" id="exampleInputEmail1" placeholder="Cédula">
+                      <input type="number" onkeypress="return event.charCode>=48 && event.charCode<=57" autofocus name="cedula" class="form-control" id="exampleInputEmail1" placeholder="Cédula">
                     </div>
                     
                     
