--- a/views/miembros.ejs
+++ b/views/miembros.ejs
@@ -38,6 +38,9 @@
                         <%= item.miembro_nombres %> <%= item.miembro_apellidos %>
                          <br><span class="badge badge-warning"><%= item.miembro_cedula %></span>   
                          <br><span class="badge badge-primary"><%= item.fecha_nac %></span>   
+                         <% if(item.miembro_verificado==1) { %>
+                          <br><span class="badge badge-danger">Verificado</span>  
+                          <% } %>
                         <input type="hidden" id='name_html_<%= item.miembro_id %>' value='<%= item.miembro_nombres %>' >
                       <input type="hidden" id='apellido_html_<%= item.miembro_id %>' value='<%= item.miembro_apellidos %>' >
                       <input type="hidden" id='id_html_<%= item.miembro_id %>' value='<%= item.miembro_id %>' >
