--- a/views/sinfechaculto.ejs
+++ b/views/sinfechaculto.ejs
@@ -114,15 +114,16 @@
       </button>-->
     </div>
   </div>
+  <img src="dist/img/hugomariela.jpg" style="width:100%" class="img-fluid" alt="Pastores">
 </header>
 
 <main>
 
-  <section class="py-5 text-center container">
-    <div class="row py-lg-5">
+  <section class="py-3 text-center container">
+    <div class="row py-lg-1">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light"><%= mensaje %></h1>
-       
+        <p class="lead text-muted">De parte de los Apóstoles Hugo y Mariela te damos la más cordial bienvenida a tu casa. ¡Somos CCLR tu familia! Dios te bendiga</p>
         <!--<p>
           <a href="#" class="btn btn-primary my-2">Main call to action</a>
           <a href="#" class="btn btn-secondary my-2">Secondary action</a>
