--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,7 +52,7 @@
               <div class="inner">
                 <h3><%= cumpleanios.length %></h3>
 
-                <p>Cumpleaños de hoy</p>
+                <p>Cumpleaños</p>
               </div>
               <div class="icon">
                 <i class="ion ion-happy-outline"></i>
