--- a/views/cumpleanios.ejs
+++ b/views/cumpleanios.ejs
@@ -54,6 +54,51 @@
               <!--/.card -->
             </div>
 
+            <!-- CUMPLEAÑOS DEL MES -->
+            <div class="col-md-6">
+              <!-- USERS LIST -->
+              <div class="card">
+                <div class="card-header">
+                  <h3 class="card-title">Cumpleaños del Mes</h3>
+
+                  <div class="card-tools">
+                    <span class="badge badge-danger"><%= cumplemes.length %> Cumpleañeros</span>
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <!--<button type="button" class="btn btn-tool" data-card-widget="remove">
+                      <i class="fas fa-times"></i>
+                    </button>-->
+                  </div>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body p-0">
+                  <ul class="todo-list" data-widget="todo-list">
+                    <% cumplemes.forEach ((item) =>{ %>      
+                    <li>
+                      
+                      <div  class="" style="display:none">
+                        <input type="checkbox" value="" name="todo2" id="todoCheck2" <%= ((dia_actual > item.fecha_nac)?'checked':'' )%>>
+                        <label for="todoCheck2"></label>
+                      </div>
+                      <span class="text"><%= item.miembro_nombres %> <%= item.miembro_apellidos %></span>
+                      <small class="badge badge-info"><i class="far fa-clock"></i> <%= item.fecha_nac %></small>
+                      
+                    </li>
+                    <% }) %>
+                    
+                  </ul>
+                  <!-- /.users-list -->
+                </div>
+                <!-- /.card-body -->
+                <div class="card-footer text-center">
+                  <!--<a href="javascript:">View All Users</a>-->
+                </div>
+                <!-- /.card-footer -->
+              </div>
+              <!--/.card -->
+            </div>
+
 
 
           </div>
